Fix some styling on mobile view

--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -84,3 +84,20 @@
         margin: 1.2rem 0;
     }
 }
+
+/* https://stackoverflow.com/questions/52894166/bootstrap-4-search-input-x-clear-search */
+input[type="search"]::-webkit-search-cancel-button {
+    /* Remove default */
+    -webkit-appearance: none;
+    /* Custom styles for x button*/
+    height: 1rem;
+    width: 1rem;
+    display: block;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+
+    /* setup all the background tweaks for the custom icon */
+    background-repeat: no-repeat;
+
+    /* icon size */
+    background-size: 1rem;
+}
